<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1">
        <ImageView
            android:contentDescription="@string/down_arrow_description"
            android:id="@+id/play_down_arrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            />
        <TextView
            android:id="@+id/play_playlist_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_title"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_alignBaseline="@id/play_down_arrow"
            android:layout_margin="8dp"
            />

    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/now_playing_album_artwork_description"
        android:id="@+id/play_album_image_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/bruno_mars_24k_gold"
        android:scaleType="center"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5"/>
    <TextView
        android:id="@+id/play_song_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/now_playing_song_name"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:layout_weight=".5"/>
    <TextView
        android:id="@+id/play_artist_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/now_playing_artist_name"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        android:layout_weight=".5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="8dp"
        >
        <ImageView
            android:contentDescription="@string/like_button"
            android:id="@+id/play_like_icon"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_favorite_border_black_24dp"
            android:layout_gravity="center_vertical"

            />
        <ImageView
            android:contentDescription="@string/previous_song_button"
            android:id="@+id/play_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_first_page_black_24dp"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:contentDescription="@string/play_pause_button"
            android:id="@+id/play_play_icon"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:contentDescription="@string/skip_song_button"
            android:id="@+id/play_forward_icon"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:src="@drawable/ic_last_page_black_24dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:contentDescription="@string/delete_song_button"
            android:id="@+id/play_x_icon"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:elevation="@dimen/navigation_elevation">

        <LinearLayout
            android:id="@+id/menu_library"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/navigation_library_button_description"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:src="@drawable/ic_library_music_black_24dp"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_library"
                android:textAlignment="center"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_divider"
            android:textSize="@dimen/navigation_divider"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:id="@+id/menu_play"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/navigation_playing_now_description"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_play_circle_filled_black_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_playing_now"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>