<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/my_music"
        style="@style/CategoryStyle"
        android:background="#2196f3"
        android:text="@string/music_text_view" />

    <TextView
        android:id="@+id/playlists"
        style="@style/CategoryStyle"
        android:background="#ff9800"
        android:text="@string/playlists_text_view" />

    <TextView
        android:id="@+id/podcasts"
        style="@style/CategoryStyle"
        android:background="#009688"
        android:text="@string/podcasts_text_view" />


    <LinearLayout
        android:layout_weight=".5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:elevation="@dimen/navigation_elevation">
        <LinearLayout
            android:id="@+id/menu_library"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:src="@drawable/ic_library_music_black_24dp"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_library"
                android:textAlignment="center"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_divider"
            android:textSize="@dimen/navigation_divider"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:id="@+id/menu_play"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_play_circle_filled_black_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_playing_now"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>